Alignment corrected.

--- a/login/css/login.css
+++ b/login/css/login.css
@@ -7,7 +7,6 @@
     box-sizing: border-box;
     box-align: center;
     border-radius: 10px;
-    margin-left: 30%;
     padding: 50px 30px;
 }
 
